// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-iAKWXU fiffMu"
  >
    <h5
      class="sc-iUKqMP kWpjPs"
    >
      Node labels
    </h5>
    <div
      class="sc-efQSVx ka-Dmgl"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-iAKWXU fiffMu"
  >
    <h5
      class="sc-iUKqMP kWpjPs"
    >
      Node labels
    </h5>
    <div
      class="sc-efQSVx ka-Dmgl"
    >
      <div
        class="sc-dkPtRN sc-hKwDye jYhbHV gKvrSp"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-dkPtRN sc-hKwDye jYhbHV gKvrSp"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-dkPtRN sc-hKwDye jYhbHV gKvrSp"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-iAKWXU fiffMu"
  >
    <h5
      class="sc-iUKqMP kWpjPs"
    >
      Property keys
    </h5>
    <div
      class="sc-efQSVx ka-Dmgl"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-iAKWXU fiffMu"
  >
    <h5
      class="sc-iUKqMP kWpjPs"
    >
      Property keys
    </h5>
    <div
      class="sc-efQSVx ka-Dmgl"
    >
      <div
        class="sc-dkPtRN sc-jRQBWg jYhbHV jZJEwZ"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-dkPtRN sc-jRQBWg jYhbHV jZJEwZ"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-iAKWXU fiffMu"
  >
    <h5
      class="sc-iUKqMP kWpjPs"
    >
      Relationship types
    </h5>
    <div
      class="sc-efQSVx ka-Dmgl"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-iAKWXU fiffMu"
  >
    <h5
      class="sc-iUKqMP kWpjPs"
    >
      Relationship types
    </h5>
    <div
      class="sc-efQSVx ka-Dmgl"
    >
      <div
        class="sc-dkPtRN sc-eCImPb jYhbHV dPdKNs"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-dkPtRN sc-eCImPb jYhbHV dPdKNs"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-dkPtRN sc-eCImPb jYhbHV dPdKNs"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
